#2751 closed bug (fixed)
Recent BTextControl changes have broken some aspects of text control size/resize when not used with BLayout.
Reported by: | anevilyak | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
After the changes to BTextControl recently, Vision's input text control no longer sizes itself to fit all the way across the window, instead staying fixed at around 40 pixels or so, with the remainder drawn in panel background color. This control is using the old BeOS way of handling resizing, is set for B_FOLLOW_LEFT_RIGHT | B_FOLLOW_BOTTOM, and has no label.
Change History (5)
comment:1 by , 17 years ago
Status: | new → assigned |
---|
comment:2 by , 17 years ago
My first chance will be after work, not sure if that will beat your evening or not :)
Note:
See TracTickets
for help on using tickets.
I probably forgot to check for the B_SUPPORTS_LAYOUT somewhere, like in GetPreferredSize(). If this Flag() is set, I bet the current width of the control should be returned if it's not smaller then the minimum width. A close look at the patch that broke this should reveal the proper location of this check. I plan on doing it tonight, but feel free to beat me to it. :-)