I accidentally removed some backwards compatible behavior. When there is no label, a TextControl maintains it's current width in ResizeToPreferred() if it is wide enough. Should fix #2751.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@27646 a95241bf-73f2-0310-859d-f6bbb57e9c96